kubernetes/web_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testgrpc-deployment
  labels:
    app: webserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: mkud/web_grpctest:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
