kubernetes/grpc_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: grpcserver1
  labels:
    app: grpcserver1
spec:
  containers:
  - name: grpcserver1
    image: mkud/grpc_grpctest:latest
    volumeMounts:
    - mountPath: /data
      name: datameters
  volumes:
  - name: datameters
    emptyDir: {}

---
kind: Service
apiVersion: v1
metadata:
  name: grpcservice1
spec:
  selector:
    app: grpcserver1
  clusterIP: None
  ports:
  - name: grpc
    protocol: TCP
    port: 50002
    targetPort: 50002
