kubernetes/web_service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: testgrpc
spec:
  selector:
    app: webserver
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
